// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> should apply borderBottomColor prop to border bottom only 1`] = `
.c0.c0.c0.c0.c0 {
  border-bottom-color: hsla(211,27%,76%,1);
  border-bottom-style: solid;
}

@media screen and (min-width:320px) {
  .c0.c0.c0.c0.c0 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c0.c0.c0.c0.c0 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c0.c0.c0.c0.c0 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c0.c0.c0.c0.c0 {
    border-bottom-style: solid;
  }
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    I am Visible
  </div>
</div>
`;

exports[`<Box /> should apply borderColor prop to all borders 1`] = `
.c0.c0.c0.c0.c0 {
  border-color: hsla(211,27%,76%,1);
  border-style: solid;
}

@media screen and (min-width:320px) {
  .c0.c0.c0.c0.c0 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c0.c0.c0.c0.c0 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c0.c0.c0.c0.c0 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c0.c0.c0.c0.c0 {
    border-style: solid;
  }
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    I am Visible
  </div>
</div>
`;

exports[`<Box /> should support passing data-analytics  attributes 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-analytics-name="demo"
    data-blade-component="box"
  />
</div>
`;

exports[`<Box /> should support passing data-analytics  attributes 2`] = `
<div>
  <section
    class="BaseBox-bmPWx"
    data-analytics-name="section"
    data-blade-component="box"
  />
</div>
`;
